# superlight

src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  message.rs  socket.rs
src/css/: styles.css
src/js/: main.js
