[package]
name = "superlight"
version = "0.0.1"
authors = ["jimvdl <jimvdlind@gmail.com>"]
repository = "https://github.com/jimvdl/superlight"
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.19.0"
anyhow = "1.0.71"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
